kubernetes/infrastructure/config/gateway/gateway/default.gateway.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/datreeio/CRDs-catalog/refs/heads/main/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: default
  annotations:
    cert-manager.io/cluster-issuer: idvn-prod
spec:
  gatewayClassName: istio
  listeners:
    - &http
      name: http
      port: 80
      protocol: HTTP
      hostname: ${IDVN_DOMAIN}
      allowedRoutes: &allowed-routes
        namespaces:
          from: All
    - <<: *http
      name: http-local
      hostname: ${LOCAL_DOMAIN}
    - &https
      name: https
      port: 443
      protocol: HTTPS
      hostname: ${IDVN_DOMAIN}
      allowedRoutes: *allowed-routes
      tls:
        mode: Terminate
        certificateRefs:
          - name: idvn-tls
    - &https-local
      <<: *https
      name: https-local
      hostname: ${LOCAL_DOMAIN}
      tls:
        mode: Terminate
        certificateRefs:
          - name: local-tls
            namespace: cert-manager
    - &http-wildcard
      <<: *http
      name: http-wildcard
      hostname: "*.${IDVN_DOMAIN}"
    - <<: *http-wildcard
      name: http-wildcard-local
      hostname: "*.${LOCAL_DOMAIN}"
    - &https-wildcard
      <<: *https
      name: https-wildcard
      hostname: "*.${IDVN_DOMAIN}"
    - <<: *https-local
      name: https-wildcard-local
      hostname: "*.${LOCAL_DOMAIN}"
    - <<: *https-wildcard
      name: 8080-https-wildcard
      port: 8080
    - name: samba
      port: 445
      protocol: TCP
      allowedRoutes:
        <<: *allowed-routes
        kinds:
          - kind: TCPRoute
